--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 3003",
+    "dev:server": "next dev --port 3005",
     "build": "next build",
-    "start": "next start",
+    "start:dev": "next start --port 3003",
+    "start": "next start --port 3005",
     "lint": "next lint",
     "server": "pm2 --name client start npm -- run dev"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
@@ -25,6 +29,7 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/js-cookie": "^3.0.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
